--- a/templates/config.html
+++ b/templates/config.html
@@ -5,8 +5,9 @@
   <table >
   <tr>
   <td style="text-align: left;">
-    <form  action="{{ url_for('config_cache_info') }}" method="post" class="add-entry">
+    <form  action="{{ url_for('config_set') }}" method="post" class="add-entry">
       <dl>
+        <dt><p align="top">系统公告:</p><textarea name="system_notice" rows="5" cols="40">{{system_notice}}</textarea>
         <dt><p align="top">集群信息:</p><textarea name="cache_info" rows="5" cols="40">{{cache_info}}</textarea>
       </dl>
       <dl style="text-align: center;">
